# RustShot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/gui/: config_mod.rs  editing_mod.rs  image_proc_extra_mod.rs  mod.rs  shortcuts.rs
src/screen/: mod.rs
