[env]
RUST_BACKTRACE = "1"


[package]
name = "rust_shot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui_extras = "0.22.0"
image = "0.24.6"
imageproc = "0.23.0"
rand = "0.8.5"
repng = "0.2.2"
scrap = "0.5.0"
tinyfiledialogs = "3.9.1"
