[env]
RUST_BACKTRACE = "1"


[package]
name = "rust_shot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arboard = "3.2.0"
clipboard = "0.5.0"
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["persistence","serde"] }
egui_extras = {version = "0.22.0", features = ["svg"]}
global-hotkey = "0.2.4"
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
keyboard-types = "0.7.0"
rand = "0.8.5"
repng = "0.2.2"
rfd = "0.11.4"
scrap = "0.5.0"
screenshots = "0.7.2"
serde = "1.0.188"
serde_json = "1.0.105"
tinyfiledialogs = "3.9.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
